Refactor sequencer and step View.

--- a/src/integrations/ix-draft-blazor/Pages/Control.razor
+++ b/src/integrations/ix-draft-blazor/Pages/Control.razor
@@ -1,5 +1,7 @@
 ﻿@page "/control"
+@using intergrations;
 
 <PageTitle>Control</PageTitle>
 
-<Sequencer />
+<RenderableContentControl Presentation="Base"
+                          Context="@Entry.Plc.Draft.ixcoreSequencers" />
