Added Toast messages

--- a/src/integrations/ix-draft-blazor/Shared/Menu/ExpandableMenuItem.razor.css
+++ b/src/integrations/ix-draft-blazor/Shared/Menu/ExpandableMenuItem.razor.css
@@ -1,10 +1,4 @@
-﻿.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-}
-
-.nav-item {
+﻿.nav-item {
     padding: 0;
     font-size: 0.9rem;
 }
