--- a/src/integrations/ix-draft-blazor/wwwroot/css/site.css
+++ b/src/integrations/ix-draft-blazor/wwwroot/css/site.css
@@ -66,3 +66,10 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+.oi {
+    width: 2rem;
+    font-size: 1.1rem;
+    vertical-align: text-top;
+}
