--- a/src/integrations/ix-draft-blazor/Shared/MainLayout.razor
+++ b/src/integrations/ix-draft-blazor/Shared/MainLayout.razor
@@ -12,7 +12,7 @@
 
         <article class="content px-4">
             @Body
-            <Toasts />
+            <Toaster />
         </article>
 
     </main>
