Small changes in Toasts

--- a/src/integrations/ix-draft-blazor/Pages/Control.razor
+++ b/src/integrations/ix-draft-blazor/Pages/Control.razor
@@ -3,5 +3,5 @@
 
 <PageTitle>Control</PageTitle>
 
-<RenderableContentControl Presentation="Base"
+<RenderableContentControl
                           Context="@Entry.Plc.Draft.ixcoreSequencers" />
