--- a/src/core/src/ix.framework.core.blazor/IxTask/IxTaskView.razor
+++ b/src/core/src/ix.framework.core.blazor/IxTask/IxTaskView.razor
@@ -1,6 +1,6 @@
 ﻿@namespace ix.framework.core
 @inherits RenderableComplexComponentBase<IxTask>
-<div class="container text-center">
+<div class="container text-left">
 
     <div class="btn-group">
 
