--- a/src/integrations/integration.blazor/Shared/NavMenu.razor
+++ b/src/integrations/integration.blazor/Shared/NavMenu.razor
@@ -1,9 +1,17 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using intergrations
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">integration.blazor</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
+    </div>
+</div>
+
+<div class="top-row ps-3 navbar navbar-dark">
+    <div class="container-fluid">
+        <label class="navbar-brand" style="font-size:16px">@Entry.Plc.Connector.SubscriptionMode </label>
     </div>
 </div>
 
