updates packages, sets to polling

--- a/src/core/src/ix.framework.core.blazor/IxComponent/IxComponentView.razor
+++ b/src/core/src/ix.framework.core.blazor/IxComponent/IxComponentView.razor
@@ -122,5 +122,6 @@
     public void Dispose()
     {
         Component._isinServiceMode.PropertyChanged -= UpdateServiceMode;
+        Component.StopPolling();
     }
 }
