Component view added, task slim views added etc.

--- a/src/core/src/ix.framework.core.blazor/IxCoordination/IxStep/IxStepCommandView.razor
+++ b/src/core/src/ix.framework.core.blazor/IxCoordination/IxStep/IxStepCommandView.razor
@@ -3,4 +3,4 @@
 @using Ix.Connector
 @inherits RenderableComplexComponentBase<IxStep>
 
-<IxStepStatusView  Component="@Component"/>
+<IxStepView Component="@Component" IsControllable="true"/>
