--- a/src/integrations/integration.blazor/Shared/NavMenu.razor
+++ b/src/integrations/integration.blazor/Shared/NavMenu.razor
@@ -23,8 +23,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="IxCore">
-                <span class="oi oi-plus" aria-hidden="true"></span> IxCore
+            <NavLink class="nav-link" href="IxCoreTask">
+                <span class="oi oi-plus" aria-hidden="true"></span> IxCore.Task
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IxCoreComponent">
+                <span class="oi oi-plus" aria-hidden="true"></span> IxCore.IxComponent
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IxCoreSequencer">
+                <span class="oi oi-plus" aria-hidden="true"></span> IxCore.IxSequencer
             </NavLink>
         </div>
     </nav>
