Refactoring ServiceMode => ManualControl

--- a/src/integrations/integration.blazor/Pages/IxCoreComponent.razor
+++ b/src/integrations/integration.blazor/Pages/IxCoreComponent.razor
@@ -10,10 +10,10 @@
     <div class="container text-left">
         <div class="row">
         <div class="col">
-            <RenderableContentControl Context="@Entry.Plc.myComponentExamples.ServiceMode" Presentation="Control" />
+            <RenderableContentControl Context="@Entry.Plc.myComponentExamples.ActivateManualControl" Presentation="Control" />
         </div>
         <div class="col">
-            <RenderableContentControl Context="@Entry.Plc.myComponentExamples.MyComponent._isinServiceMode" Presentation="Display" />
+            <RenderableContentControl Context="@Entry.Plc.myComponentExamples.MyComponent._isManuallyControllable" Presentation="Display" />
         </div>
         </div>
         <div class="col">
