--- a/src/integrations/integration.blazor/Shared/NavMenu.razor
+++ b/src/integrations/integration.blazor/Shared/NavMenu.razor
@@ -33,6 +33,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IxCoreComponentExamples">
+                <span class="oi oi-plus" aria-hidden="true"></span> IxCore.IxComponent.Examples
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="IxCoreSequencer">
                 <span class="oi oi-plus" aria-hidden="true"></span> IxCore.IxSequencer
             </NavLink>
