--- a/docfx/templates/custom/styles/custom.css
+++ b/docfx/templates/custom/styles/custom.css
@@ -2,12 +2,12 @@
   font-weight: bold;
   font-size: large;
   margin:15px;
-  color:-webkit-linear-gradient(#e45807 , #5e92f3);
-  background-color: #e45807;
+  color:#FFFFFF;
+  background-color: #24A8DF;
 }
 
 .text-logo:hover{
-  background: -webkit-linear-gradient(#5e92f3,#e45807);
+  background: -webkit-linear-gradient(#24A8DF,#24A8DF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
