--- a/docfx/templates/material/styles/main.css
+++ b/docfx/templates/material/styles/main.css
@@ -1,6 +1,6 @@
 /* COLOR VARIABLES*/
 :root {
-  --header-bg-color: #0d47a1;
+  --header-bg-color: #24A8DF;
   --header-ft-color: #fff;
   --highlight-light: #5e92f3;
   --highlight-dark: #003c8f;
